# Catalyst

./: .gitignore  .gitmodules  Build.sh  CMakeLists.txt
Assets/Resources/Shaders/FX/: Basic.fx  Blinn.fx  Common.fxh  LightHelper.fxh  Sprite.fx
Docs/: Catalyst
Docs/Pages/: GDD.md  TDD.md  index.md
Docs/Pages/TDD/: Rendering.md
Engine/: CMakeLists.txt  CatalystConfig.h.in
Engine/inc/: Engine.h  Framework.h
Engine/inc/Core/: Engine.h  Input.h  Math.h  Physics.h  Scene.h  Time.h  TypeMap.h  Types.h
Engine/inc/Entity/: Components.h  ECS.h
Engine/inc/Graphics/: Camera.h  Font.h  Graphics.h  Lights.h  Model.h  Sprite.h  Text.h  Window.h
Engine/inc/Graphics/Backends/: DX11_GFX.h
Engine/inc/IO/: Importer.h  Logger.h  ResourcePool.h  TypeConversion.h
Engine/src/: DX11_GFX.cpp  Importer.cpp  Input.cpp  Logger.cpp  Math.cpp  Physics.cpp  ResourcePool.cpp  Window.cpp  main.cpp
Game/: main.cpp  resources.rc
